--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -849,7 +849,7 @@
 						<fieldset class="repeating_quality">
 							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<button class="pictos" name="quality_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{quality}}}{{desc=@{notes}}}">w</button>
-							<button class="pictos" name="act_quality" type="action">x</button>
+							<button class="pictos settings-button" name="act_quality" type="action">x</button>
 							<div class="settings"style="margin-left: 0px;">
 								<div>
 									<input type="text" name="attr_quality" placeholder="Quality name" title="Quality name" />
@@ -897,7 +897,7 @@
 									<span class="desc" name="attr_notes"></span>
 								</div>
 							</div>
-							<button class="pictos" name="act_martial" type="action">x</button>
+							<button class="pictos settings-button" name="act_martial" type="action">x</button>
 						</fieldset>
 					</div>
 				</div>
@@ -928,7 +928,7 @@
 					</div>
 					<div class="weapon-range">
 						<fieldset class="repeating_range">
-							<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" value="primary" /><span>x</span>
+							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<div class="settings">
 								<div>
 									<input type="text" name="attr_weapon" placeholder="Ares Alpha" title="Weapon name" />
@@ -1002,6 +1002,7 @@
 									<div class="desc"><span name="attr_notes"></span></div>
 								</div>
 							</div>
+							<button class="pictos settings-button" name="act_range" type="action">x</button>
 						</fieldset>
 					</div>
 					<div class="weapon-melee row-long">
@@ -1009,7 +1010,7 @@
 					</div>
 					<div class="weapon-melee">
 						<fieldset class="repeating_melee">
-							<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<div class="settings">
 								<div>
 									<input type="text" name="attr_weapon" placeholder="Katana" title="Weapon name" />
@@ -1057,6 +1058,7 @@
 									<div class="desc"><span name="attr_notes"></span></div>
 								</div>
 							</div>
+							<button class="pictos settings-button" name="act_melee" type="action">x</button>
 						</fieldset>
 					</div>
 				</div>
@@ -1070,7 +1072,7 @@
 						<h3 data-i18n="armor">Armor</h3><h3 data-i18n="rating">Rating</h3><h3 data-i18n="acid">Acid</h3><h3 data-i18n="cold">Cold</h3><h3 data-i18n="elec">Elec.</h3><h3 data-i18n="fire">Fire</h3><h3 data-i18n="radi">Radi.</h3>
 					</div>
 					<fieldset class="repeating_armor">
-						<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<div class="settings">
 							<div>
 								<input type="text" name="attr_name" placeholder="Armor Jacket" title="Armor name" />
@@ -1119,6 +1121,7 @@
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
 						</div>
+						<button class="pictos settings-button" name="act_armor" type="action">x</button>
 					</fieldset>
 				</div>
 			</div>
@@ -1134,7 +1137,7 @@
 						<h3 data-i18n="augmentations">Augementation</h3><h3 data-i18n="rating">Rating</h3><h3 data-i18n="essence">Essence</h3>
 					</div>
 					<fieldset class="repeating_augementations">
-						<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<div class="settings">
 							<div> 
 								<input type="text" name="attr_augmentation" placeholder="Augementation" title="Augementation name" />
@@ -1153,6 +1156,7 @@
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
 						</div>
+						<button class="pictos settings-button" name="act_augementations" type="action">x</button>
 					</fieldset>
 				</div>
 			</div>
@@ -1167,7 +1171,7 @@
 					<h3 data-i18n="item">Item</h3><h3 data-i18n="rating">Rating</h3>
 				</div>
 				<fieldset class="repeating_items">
-					<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+					<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 					<div class="settings">
 						<div>
 							<input type="text" name="attr_item" placeholder="Item name" title="Item name" />
@@ -1184,6 +1188,7 @@
 							<div class="desc"><span name="attr_notes"></span></div>
 						</div>
 					</div>
+					<button class="pictos settings-button" name="act_items" type="action">x</button>
 				</fieldset>
 			</div>
 		</div>
@@ -1214,7 +1219,7 @@
 					</div>
 					<div class="magic-spells">
 						<fieldset class="repeating_spell">
-							<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle"  /><span>x</span>
+							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<div class="settings">
 								<div>
 									<input type="text" name="attr_name" placeholder="Fireball" title="Spell name" />
@@ -1289,11 +1294,12 @@
 									<div class="desc"><span name="attr_notes"></span></div>
 								</div>
 							</div>
+							<button class="pictos settings-button" name="act_spell" type="action">x</button>
 						</fieldset>
 					</div>
 					<div class="magic-preps">
 						<fieldset class="repeating_preps">
-							<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<div class="settings">
 								<div>
 									<input type="text" name="attr_name" placeholder="Fireball" title="Spell name" />
@@ -1365,11 +1371,12 @@
 									<div class="desc"><span name="attr_notes"></span></div>
 								</div>
 							</div>
+							<button class="pictos settings-button" name="act_preps" type="action">x</button
 						</fieldset>
 					</div>
 					<div class="magic-rituals">
 						<fieldset class="repeating_ritual">
-							<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+							<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 							<div class="settings">
 								<div>
 									<input type="text" name="attr_name" placeholder="Curse (MATERIAL LINK, SPELL)" title="Ritual name" />
@@ -1396,6 +1403,7 @@
 									<div class="desc"><span name="attr_notes"></span></div>
 								</div>
 							</div>
+							<button class="pictos settings-button" name="act_ritual" type="action">x</button>
 						</fieldset>
 					</div>
 				</div>
@@ -1410,7 +1418,7 @@
 						<h3>Name</h3><h3>Rating</h3>
 					</div>
 					<fieldset class="repeating_powers">
-						<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<div class="settings">
 							<div>
 								<input type="text" name="attr_name" placeholder="Adept powers or other ability" title="Ability or power name" />
@@ -1427,6 +1435,7 @@
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
 						</div>
+						<button class="pictos settings-button" name="act_powers" type="action">x</button>
 					</fieldset>
 				</div>
 			</div>
@@ -1582,7 +1591,7 @@
 						<h3 data-i18n="complexform">Complex Form</h3><h3 data-i18n="target">Target</h3><h3 data-i18n="duration">Duration</h3><h3 data-i18n="fade">Fade</h3>
 					</div>
 					<fieldset class="repeating_forms">
-						<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<div class="settings">
 							<div> 
 								<input type="text" name="attr_name" placeholder="Editor" title="Complex Form name" />
@@ -1630,6 +1639,7 @@
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
 						</div>
+						<button class="pictos settings-button" name="act_forms" type="action">x</button>
 					</fieldset>
 				</div>
 			</div>
@@ -1711,7 +1721,7 @@
 			<div class="border-box repeat-box vehicle-box">
 				<div class="pc-box medium-box">
 					<fieldset class="repeating_vehicle">
-						<input type="checkbox" class="settings-toggle" name="attr_flag" checked="checked" title="Settings toggle" /><span>x</span>
+						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<div class="settings">
 							<div>
 								<div class="row-long">
@@ -1768,7 +1778,9 @@
 									<input type="hidden" name="attr_display_sensor" placeholder="#" />
 								</div>
 								<div class="row-long">
-									<h3 data-i18n="base">Base</h3><h3 data-i18n="modifier">Modifier</h3><h3 data-i18n="temp">Temp</h3><h3 data-i18n="base">Base</h3><h3 data-i18n="modifier">Modifier</h3><h3 data-i18n="temp">Temp</h3>
+									<h3 data-i18n="base">Base</h3><h3 data-i18n="modifier">Modifier</h3>
+									<h3 data-i18n="temp">Temp</h3><h3 data-i18n="base">Base</h3>
+									<h3 data-i18n="modifier">Modifier</h3><h3 data-i18n="temp">Temp</h3>
 								</div>
 								<h3 data-i18n="notes">Notes</h3>
 								<textarea name="attr_notes" value="" placeholder="Notes"></textarea>
@@ -1796,6 +1808,7 @@
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
 						</div>
+						<button class="pictos settings-button" name="act_vehicle" type="action">x</button>
 					</fieldset>
 				</div>
 			</div>
@@ -3209,7 +3222,7 @@
 		}); 
 	});
 
-	["quality", "martial"].forEach((attr) => {
+	["quality", "martial", "items", "range", "melee", "armor", "spell", "preps", "ritual", "powers", "forms", "vehicle", "augementations"].forEach((attr) => {
 		on(`clicked:repeating_${attr}:${attr}`, (eventinfo) => {
 			settingsToggle(eventinfo);
 		}); 
@@ -4201,7 +4214,15 @@
 			</ol>
 			<em>Chummer frequently has the wrong information for Weapons. Review them in the Arms tab after clicking apply. Specializations will not be applied to Weapons or Magic. You will need to manually update the checkbox.</em>`;
 
-	const herolabDirections = `We're working on it.`
+	const herolabDirections = `
+		<ol>
+			<li>Download the file "HLtoRoll20Export.hl" from: https://drive.google.com/file/d/0B3E3jkp51s8aRmpTU1NMRjRIVkk/view</li>
+			<li>Double click the file. Hero Lab will import it automatically now.</li>
+			<li>Load a character</li>
+			<li>Go to File/Save Custom Output and select the "Roll20 Export"</li>
+			<li>Save the file. It should open automatically in your browser</li>
+			<li>Follow the directions.</li>
+		</ol>`;
 
 	on("change:builder", (eventinfo) => {
 		let setText = {};
@@ -4325,7 +4346,6 @@
 			const skillList = character.skills.skill;
 			skillList.forEach((skill) => {
 				try {
-					console.log(`%c ${skill.name}`, "color:blue;font-size:18px;");
 					const rating = parseInt(skill.rating) || 0;
 					if (rating > 0) {
 						const id = generateRowID();
@@ -4348,12 +4368,12 @@
 							skill.name;
 						update[`${section}_rating`] = skill.rating;
 						update[`${section}_rating_modifier`] = skill.ratingmod;
-            let skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
+            			const skilltotal = parseInt(skill.rating) + parseInt(skill.ratingmod);
 						update[`${section}_dicepool`] = skilltotal;
 
 						//ACTIVE SKILLS HAVE THEIR TOTAL SAVED IN A HIDDEN ATTRIBUTE
 						if (type === "active") {
-							update[skill.name.toLowerCase().replace(" ", "")] = skill.total;
+							update[skill.name.toLowerCase().replace(/ /g, "")] = skill.total;
 						};
 
 						//This needs to be verified with multiple specializations
@@ -4395,16 +4415,6 @@
 			} catch (error) {
 				setText["error"] += addFeedback("movement", error);
 			};
-
-			//ELEMENTAL ARMOR
-			["acid", "electricity", "fire", "cold"].forEach((element) => {
-				try {
-					const name = (element === "electricity") ? "electrical" : element;
-					update[`${name}_modifier`] = character[`${element}armor`] - character.armor;
-				} catch (error) {
-					setText["error"] += addFeedback(`${element} armor`, error);
-				};
-			});
 
 			//MARTIAL ARTS
 			if (character.martialarts != null) {
@@ -4467,6 +4477,8 @@
 				        if (weapon.clips != null && weapon.clips.clip != null) {
 				          const clips = Array.isArray(weapon.clips.clip) ? weapon.clips.clip : [ weapon.clips.clip ];
 				          update[`${section}_ammo`] = clips[0].count;
+				        } else if (weapon.ammo) {
+				        	 update[`${section}_ammo`] = weapon.ammo;
 				        };
 
 				        //RANGE
@@ -4491,9 +4503,81 @@
 
 				      	update[`${section}_notes`] = accessories;
 			      	};
+
+			      	// TOGGLE THE SETTINGS OFF
+			      	update[`${section}_flag`] =  "display";
 				} catch (error) {
 					setText["error"] += addFeedback(JSON.stringify(weapon), error);
 				};
+			});
+
+			//ARMOR
+			const armorList = Array.isArray(character.armors.armor) ? character.armors.armor : [ character.armors.armor ];
+			armorList.forEach((armor) => {
+				try {
+					const id = generateRowID();
+					if (armor.category != "Clothing") {
+						const section = `repeating_armor_${id}`;
+						let armorMods = "";
+						let armorGear = "";
+
+						// ARMOR NAME
+						update[`${section}_name`] =  armor.name;
+
+						// ARMOR sometimes has a bonus
+						update[`${section}_rating`] = (armor.armor.includes("/+")) ? armor.armor.split("/+")[0] : armor.armor;
+
+						// ARMOR MODS
+						if (armor.armormods && armor.armormods != null) {
+							const modsList = Array.isArray(armor.armormods.armormod) ? armor.armormods.armormod : [ armor.armormods.armormod ];
+							modsList.forEach((modification) => {
+								armorMods += `${modification.name}, `;
+
+								if (modification.name === "Nonconductivity") {
+									update[`${section}_electrical_modifier`] = modification.rating;
+								} else if (modification.name === "Thermal Damping" || modification === "Insulation") {
+									update[`${section}_cold_modifier`] = modification.rating;
+								} else if (modification.name === "Radiation Shielding") {
+									update[`${section}_radiation_modifier`] = modification.rating;
+								} else if (modification.name === "Chemical Protectio") {
+									update[`${section}_acid_modifier`] = modification.rating;
+								} else if (modification.name === "Fire Resistance") {
+									update[`${section}_fire_modifier`] = modification.rating;
+								};
+							});
+						};
+
+						// ARMOR GEAR
+						if (armor.gears && armor.gears != null) {
+							const gearList = Array.isArray(armor.gears.gear) ? armor.gears.gear : [ armor.gears.gear ];
+							gearList.forEach((gear) => {
+								if (gear.children) {
+									const childrenList = Array.isArray(gear.children.gear) ? gear.children.gear : [ gear.children.gear ];
+									childrenList.forEach((child) => {
+										armorGear += `${gear.name} (${child.name}), `;
+									});
+								} else {
+									armorGear += `${gear.name}, `;
+								};
+							});
+						};
+
+						// HIDE SETTINGS
+						update[`${section}_flag`] =  "display";
+
+						update[`${section}_notes`] =  
+							(armorMods && armorGear) ? `Modification: ${armorMods} Gear: ${armorGear}` :
+							(armorMods) ? `Modification: ${armorMods}` :
+							(armorGear) ? `Gear: ${armorGear}` : "";
+					} else {
+						// Chummer puts Clothing in with armor
+						const section = `repeating_items_${id}`;
+						update[`${section}_item`] =  armor.name;
+						update[`${section}_flag`] =  "display";
+					};
+				} catch (error) {
+					setText["error"] += addFeedback(JSON.stringify(armor), error);
+				}
 			});
 
 			setCharmancerText(setText);
@@ -4536,7 +4620,7 @@
 			};
 		});
 
-    clean();
+    	clean();
 		setAttrs(mancerValues, () => {
 			console.log(`%c APPLY IMPORTER:`, "color: blue; font-weight:bold");
 			console.log(mancerValues);
