fix magic/res attribute not being set properly. fix positive AP input

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -4291,13 +4291,7 @@
 			attributes.forEach((object) => {
 				try {
 					const charSheetAttr = attributeKeys[object.name];
-					if (charSheetAttr === "magic" || charSheetAttr === "resonance") {
-						["magic", "resonance"].forEach((special) => {
-							const flag = (charSheetAttr === `${special}` && update[`flag_special`] === `${special}`) ? true : false;
-							update[`${charSheetAttr}_base`] = (flag) ? object.base : 0;
-							update[`${charSheetAttr}_modifier`] = (flag) ? object.total - object.base : 0;
-						});
-					} else if (charSheetAttr === "edge") {
+					if (charSheetAttr === "edge") {
 						update[`${charSheetAttr}`] = object.base;
 					} else {
 						update[`${charSheetAttr}_base`] = object.base;
@@ -4451,7 +4445,7 @@
 			      			update[`${section}_${weaponKeys[key]}`] = 
 			      				(key != "damage" && weapon[`${key}`].includes("(")) ? getValInParen(weapon[`${key}`]) :
 			      				(key === "skill") ? `@{${weapon[`${key}`].toLowerCase().replace(" ", "")}}` :
-			      				weapon[`${key}`];
+			      				weapon[`${key}`].replace("+", ""); // remove the "+" when dealing with positive AP
 			      		} else if (key === "skill" && category.includes("EXOTIC")) {
 			      			update[`${section}_skill`] = 0;
 			      		};
