--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_version" value="2.7001">
+<input type="hidden" name="attr_version" value="2.7002">
 
 <input class="monster_confirm_flag" type="hidden" name="attr_monster_confirm_flag">
 <input class="mancer_confirm_flag" type="hidden" name="attr_mancer_confirm_flag">
@@ -10724,20 +10724,21 @@
 
     var versioning = function(finished) {
         getAttrs(["version"], function(v) {
-            if(v["version"] === "2.7") {
+            const version = parseFloat(v["version"]) || 0.0;
+            if(version >=  "2.7") {
                 setAttrs({version: "2.7"}, function(){
                     finished();
                 });
                 console.log("5th Edition OGL by Roll20 v" + v["version"]);
                 return;
             }
-            else if(!v["version"] || v["version"] === "") {
+            else if(!version || version === "") {
                 console.log("NO VERSION FOUND");
                 no_version_bugfix(function() {
                     versioning(finished);
                 });
             }
-            else if(v["version"] === "2.6") {
+            else if(version >= "2.6") {
                 console.log("UPGRADING TO v2.7");
                 upgrade_to_2_7(function() {
                     setAttrs({version: "2.7"}, function() {
@@ -10745,7 +10746,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.5") {
+            else if(version >= "2.5") {
                 console.log("UPGRADING TO v2.6");
                 upgrade_to_2_6(function() {
                     setAttrs({version: "2.6"}, function() {
@@ -10753,7 +10754,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.4") {
+            else if(version >= "2.4") {
                 console.log("UPGRADING TO v2.5");
                 upgrade_to_2_5(function() {
                     setAttrs({version: "2.5"}, function() {
@@ -10761,7 +10762,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.3") {
+            else if(version >= "2.3") {
                 console.log("UPGRADING TO v2.4");
                 upgrade_to_2_4(function() {
                     setAttrs({version: "2.4"}, function() {
@@ -10769,7 +10770,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.2") {
+            else if(version >= "2.2") {
                 console.log("UPGRADING TO v2.3");
                 upgrade_to_2_3(function() {
                     setAttrs({version: "2.3"}, function() {
@@ -10777,7 +10778,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.1") {
+            else if(version >= "2.1") {
                 console.log("UPGRADING TO v2.2");
                 upgrade_to_2_2(function() {
                     setAttrs({version: "2.2"}, function() {
@@ -10785,7 +10786,7 @@
                     });
                 });
             }
-            else if(v["version"] === "2.0") {
+            else if(version >= "2.0") {
                 console.log("UPGRADING TO v2.1");
                 upgrade_to_2_1(function() {
                     setAttrs({version: "2.1"}, function() {
