Change select named "sex" to input text with new name "gender".

--- a/Cyberpunk2k20_v2/Cyberpunk2k20.html
+++ b/Cyberpunk2k20_v2/Cyberpunk2k20.html
@@ -21,12 +21,8 @@
             <span class="bio-title" class="bioView" name="attr_class"></span>
             <input class="bioEdit" type="text" name="attr_class" style="width:150px;">
             <h4>Genre:</h4>
-            <span class="bio-title" class="bioView" name="attr_sex"></span>
-            <select name="attr_sex" style="width:70px;">
-                <option value="M">Male</option>
-                <option value="F">Female</option>
-                <option value="O">Other</option>
-            </select>
+            <span class="bio-title" class="bioView" name="attr_gender"></span>
+            <input type="text" name="attr_gender" style="width:70px;"/>
             <!--
             <select class="bioEdit" name="attr_class" style="width:180px;">
                 <option value="Solo">Solo</option>
