Attempt to fix sheet.json, by declaring in the HTML the "fake" attribute used as section title.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8149,6 +8149,7 @@
     			    <input type="checkbox" class="sheet-hideCSN" name="attr_hideCSN" /><span class="sheet-showCSN"></span>
     			    <h3 class='sheet-configSectionTitle' data-i18n="change-skill-names">Change Skill Names</h3>
                         <div data-i18n="change-skills-explained">Tick the skills allowed in your setting, and adapt their name if need be. Skills unticked will be hidden from the Character skill selection section. If the skill was already shown on the Character skill list, it will remain shown. Fightning can't be removed, it is mandatory (used for Parry). However you can still rename it.</div>
+                        <input type="hidden" name="attr_skillsforyoursetting" value="used as a separator in sheet.json" />
     			    <div class="sheet-csnconfig">
                             <!--Fighting--><div class="sheet-csnItem"><input type="checkbox" readonly="readonly" checked="checked" value="on" /><label class="sheet-csnLabel" data-i18n="fighting">Fighting</label> = <input type="text" class="sheet-csnInput" name="attr_fightingname" value="" /></div>
                             <!--Academics--><div class="sheet-csnItem"><label class="sheet-csnLabel"><input type="checkbox" name="attr_allowAcademics" checked="checked" value="on" /><span data-i18n="academics">Academics</span></label> = <input type="text" class="sheet-csnInput" name="attr_academicsname" value="" /></div>
